--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Summary_20210315/__pycache__/*
 QUBIT/__pycache__/*
 QUBIT/Summary_20210302/__pycache__/*
 QUBIT/BV*
+QUBIT/Summary_20210302/test/*
 
 .DS_Store
 Summary_20210315/.DS_Store
