Code looks good Hailey! Made a few adjustments, we still need: 1. code to calculate W for n>3 2. code for the numerical plots we want to include 3. extend current final version to qutrits. Then I think we are done

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ __pycache__/*
 Summary_20210315/__pycache__/*
 QUBIT/__pycache__/*
 QUBIT/Summary_20210302/__pycache__/*
+QUBIT/FinalVersion/__pycache__/*
 QUBIT/BV*
 QUBIT/Summary_20210302/test/*
 QUBIT/Summary_20210302/test_pauli/*
