Added sampling code, cleaned up code. Sampling QAOA does not work at the moment, next step: debug it and get results

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 
-FinalVersion/__pycache__/*
-FinalVersion_Qutrit/__pycache__/*
-FinalVersion_Qutrit/__pycache__/*
+FinalVersion/*
+FinalVersion_Qutrit/*
+HK_Update/*
+data/*
+__pycache__/*
