Tidying up. Files starting with <test_> produce the figures. Data for the figures on the paper is already provided in folders. Other files contain the merging(compression) and optimisation sub-routines and the sampling algorithm, along with auxiliary scripts to generate frames.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
 .DS_Store
 .gitpush.txt
-
 .ipynb_checkpoints/*
-FinalVersion/*
-FinalVersion_Qutrit/*
-HK_Update/*
-data/*
 __pycache__/*
-
-
-*.npy
+_prev/*
